package chapter5.domain.refactoring.rf4_movie;

public class PercentDiscountPolicy implements DiscountPolicy {

}
